--- a/greatPlaces/app/build.gradle
+++ b/greatPlaces/app/build.gradle
@@ -1,15 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id "org.jetbrains.kotlin.kapt"
 }
 
 android {
-    namespace 'com.example.roomdatabasedemo'
+    namespace 'com.example.greatplaces'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.roomdatabasedemo"
+        applicationId "com.example.greatplaces"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -32,24 +31,12 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        viewBinding = true
     }
 }
 
 dependencies {
-    def room_version = "2.4.3"
-    def activity_version = "1.6.1"
-
-    // Room and Lifecycle dependencies
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor("androidx.room:room-compiler:$room_version")
-    kapt("androidx.room:room-compiler:$room_version")
-
-    //kotlin extensions for coroutine support with room
-    implementation("androidx.room:room-ktx:$room_version")
-
-    //kotlin extension for coroutine support with activities
-    implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "com.google.android.material:material:1.7.0"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -57,5 +44,4 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    debugImplementation "com.infinum.dbinspector:dbinspector:5.4.9"
 }
