--- a/SevenMinWorkout/app/src/main/AndroidManifest.xml
+++ b/SevenMinWorkout/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     </queries>
 
     <application
+        android:name=".WorkOutApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,6 +19,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SevenMinWorkout"
         tools:targetApi="31">
+        <activity
+            android:name=".HistryActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".BMIActivity"
             android:exported="false">
